--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 6d1c616ae
+	base = 753a50f72
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 6d1c616ae
