--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 4858d44b6
+	base = e9e185eea
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 4858d44b6
