--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 95caccdba
+	base = 10a16b496
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 95caccdba
