--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 9495b7c11
+	base = 8cb9dc24d
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 9495b7c11
