--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 0c0af7102
+	base = ca1993fed
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 0c0af7102
