--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = a41e914de
+	base = 13319234a
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = a41e914de
