--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 52763a0f1
+	base = 0b94bbe30
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 52763a0f1
