--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = d1434b50e
+	base = e83e825ab
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = d1434b50e
