--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 3b0a31608
+	base = cdff60ee1
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 3b0a31608
