--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 905623f06
+	base = c1483e2c9
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 905623f06
