--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 5ff25a800
+	base = 627988f40
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 5ff25a800
