--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 9976e5bf5
+	base = eebae6b96
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 9976e5bf5
