--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 951aead6c
+	base = db7cacb33
 	trim = position_controllers
-	trimbase = 
+	trimbase = 951aead6c
