--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = ddda40b98
+	base = 04885bfb8
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = ddda40b98
