--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 9025a903b
+	base = 84ecd1d03
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 9025a903b
