--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 94b7669cb
+	base = 7c805d87a
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 94b7669cb
