--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = 4b3a7a3b3
+	base = 97d4632e4
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 4b3a7a3b3
