--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = ed319c0d4
+	base = 353bed970
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = ed319c0d4
