--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = c18051796
+	base = e2c7598e7
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = c18051796
