--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4ff691130
-	base = f7c3e84c8
+	base = acb561987
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = f7c3e84c8
