--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = a353b0c05
+	base = ea2bed313
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = a353b0c05
