--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 2d48c627d
+	base = a7b06155a
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 2d48c627d
