--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 38bf08451
+	base = d2b5c4cc6
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 38bf08451
