--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = c957edd65
+	base = 419c05450
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = c957edd65
