--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 7ecbf0d28
+	base = d45d0c072
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 7ecbf0d28
