--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = efe029358
+	base = 144c5dea7
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = efe029358
