--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = d31db3c97
+	base = 3cabe719e
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = d31db3c97
