--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 71b8d6202
+	base = 1db414502
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 71b8d6202
