--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 650ecab24
+	base = 1ac70dcea
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 650ecab24
