--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 2286d7279
+	base = 47f71845d
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 2286d7279
