--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 0826f117d
+	base = 81511bdd7
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 0826f117d
