--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 5f11fb7c7
+	base = 683a9a5de
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 5f11fb7c7
