--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 4f65d554e
+	base = a5848134a
 	trim = position_controllers
-	trimbase = 
+	trimbase = 4f65d554e
