--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = c21749877
+	base = 907f78135
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = c21749877
