--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 91205381b
+	base = 868ac382f
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 91205381b
