--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = b56dc3999
+	base = 13ef71438
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = b56dc3999
