--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 5dfeb55bf
+	base = 16470622c
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 5dfeb55bf
