--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = f358ce46f
+	base = c92bca8e7
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = f358ce46f
