--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = cd600d2f8
+	base = 8559d0964
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = cd600d2f8
