--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 0d9933ecf
+	base = 5d38a4f1d
 	trim = pid_controller
-	trimbase = 
+	trimbase = 0d9933ecf
