--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = c2974c6c1
+	base = be8c38bd6
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = c2974c6c1
