--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 1886e0481
+	base = dbbd69595
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 1886e0481
