--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = f7f445637
+	base = eaf4d2c6d
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = f7f445637
