--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = e9ae0b338
+	base = f618b283e
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = e9ae0b338
