--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 573fc809c
+	base = 244de72e4
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 573fc809c
