--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 46ec6462e
+	base = 8b2f4236f
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 46ec6462e
