--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = f1e448149
+	base = 8c1acf455
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = f1e448149
