--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = f0800e992
+	base = 859c66a2b
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = f0800e992
