--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 93b20cbcb
+	base = 71788fbba
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 93b20cbcb
