--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = f777f17d6
+	base = 9314b4da2
 	trim = effort_controllers
-	trimbase = 
+	trimbase = f777f17d6
