--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = ce3a2ed61
+	base = d3f91e97b
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = ce3a2ed61
