--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 0d82902f0
+	base = ab0751e18
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 0d82902f0
