--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = b1b009e8a
+	base = d060ceeb0
 	trim = admittance_controller
-	trimbase = 
+	trimbase = b1b009e8a
