--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = bf54d7123
+	base = 55673218d
 	trim = position_controllers
-	trimbase = 
+	trimbase = bf54d7123
