--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 62efc9548
+	base = cafc9d559
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 62efc9548
