--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 6b4c76a62
+	base = f5814255d
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 6b4c76a62
