--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 3c491be0a
+	base = a550db6cc
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 3c491be0a
