--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 02f78e9ba
+	base = 939cf0156
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 02f78e9ba
