--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = f1eb5ff63
+	base = 0707b0b13
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = f1eb5ff63
