--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 23d44aac6
+	base = 8b30d86aa
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 23d44aac6
