--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 363548057
+	base = da52847bb
 	trim = pid_controller
-	trimbase = 
+	trimbase = 363548057
