--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 012214f87
-	base = 32cba71b5
+	base = 1c9c8b1ec
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 32cba71b5
