--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 180e88ce8
+	base = f8e65c745
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 180e88ce8
