--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = ebafbcfbf
+	base = e70c2509a
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = ebafbcfbf
