--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 46d90622e
+	base = 6661c63ca
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 46d90622e
