--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 4ef03c1c1
+	base = 9067e4de1
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 4ef03c1c1
