--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = e800ba97e
+	base = bb87b47c2
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = e800ba97e
