--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 6f6b10a18
+	base = 6b1111188
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 6f6b10a18
