--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 16a792ee2
+	base = 42b0e5480
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 16a792ee2
