--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = fc401834d
+	base = bde087bd1
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = fc401834d
