--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = d51be0408
+	base = 19740f6d4
 	trim = effort_controllers
-	trimbase = 
+	trimbase = d51be0408
