--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = e5fecfe53
+	base = 66fc38d1d
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = e5fecfe53
