--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 323a6be68
+	base = a8ba4c541
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 323a6be68
