--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 41154d489
+	base = 74d325201
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 41154d489
