--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = ae3cba155
+	base = d9177d806
 	trim = position_controllers
-	trimbase = 
+	trimbase = ae3cba155
