--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 90f2fa681
+	base = 543b5d591
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 90f2fa681
