--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 8807ee41a
+	base = 13cb39983
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 8807ee41a
