--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 8dee40688
+	base = 07f381dc0
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 8dee40688
