--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = d321ea8e2
+	base = a83417655
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = d321ea8e2
