--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = f5bc7377b
+	base = e82e35b87
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = f5bc7377b
