--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 9ab018f07
+	base = d4a2bf67c
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 9ab018f07
