--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 915c65993
+	base = 107da0789
 	trim = pid_controller
-	trimbase = 
+	trimbase = 915c65993
