--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = b06a56ad2
+	base = 87bf26e56
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = b06a56ad2
