--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 7e68dbfb3
+	base = 8c590d78e
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 7e68dbfb3
