--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 906a3d394
+	base = 5f12c8834
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 906a3d394
