--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 0394c55b1
+	base = 39a272960
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 0394c55b1
