--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = da34b4c36
+	base = 48610b84c
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = da34b4c36
