--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 7de37d86b
+	base = dd29c3d31
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 7de37d86b
