--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 05f0dbadd
+	base = ae47043e4
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 05f0dbadd
