--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = c502bfbc4
+	base = e812d0dad
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = c502bfbc4
