--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = e47b50e79
+	base = b1496415c
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = e47b50e79
