--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 18141868c
+	base = 89808f569
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 18141868c
