--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 472125177
+	base = 99edceeb4
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 472125177
