--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 38e6ef40b
+	base = 56a06a87a
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 38e6ef40b
