--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = e01c6a543
+	base = a685af501
 	trim = admittance_controller
-	trimbase = 
+	trimbase = e01c6a543
