--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 3c52dbfc1
+	base = 8201ac99b
 	trim = position_controllers
-	trimbase = 
+	trimbase = 3c52dbfc1
