--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 28e12da0d
+	base = a356548a6
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 28e12da0d
