--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 7b8055f06
+	base = 4bf3cd3cd
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 7b8055f06
