--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 194be69dc
+	base = 7a6601abb
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 194be69dc
