--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 73630239f
+	base = 6660df055
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 73630239f
