--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 8adcaae4e
+	base = 06bd9b770
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 8adcaae4e
