--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = cacddc5c0
+	base = 2147e0dea
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = cacddc5c0
