--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = ddb23ab40
+	base = f91f12db0
 	trim = pid_controller
-	trimbase = 
+	trimbase = ddb23ab40
