--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 825bb7889
-	base = 6b9930b4f
+	base = f1775c3b2
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 6b9930b4f
