--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 518673041
+	base = 17e2f705b
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 518673041
