--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 7b0de5406
+	base = ed96681a3
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 7b0de5406
