--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = ff4a87e6f
+	base = 90f1e6b24
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = ff4a87e6f
