--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 0da0b1c34
+	base = f8b497eab
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 0da0b1c34
