--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = c63f51e53
+	base = 8d78ebf1b
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = c63f51e53
