--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = bc972780c
+	base = 273437c22
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = bc972780c
