--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = b8ef95fa7
+	base = 6ed21bb41
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = b8ef95fa7
