--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 4604be13a
+	base = e42cb3887
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 4604be13a
