--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 999a62e02
+	base = be5d5316c
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 999a62e02
