--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = fdf21e920
+	base = 1c55493df
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = fdf21e920
