--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 11cf4a4f9
+	base = 631d96cde
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 11cf4a4f9
