--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 66cd115ea
+	base = ee06e4c95
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 66cd115ea
