--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 2b0467be5
+	base = ab8de940f
 	trim = position_controllers
-	trimbase = 
+	trimbase = 2b0467be5
