--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = da0300f9e
+	base = 69fc3c25c
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = da0300f9e
