--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = e6d67cf95
+	base = d3ea3e71b
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = e6d67cf95
