--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 5b33499fb
+	base = 1aff5c17e
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 5b33499fb
