--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 9f84511a3
+	base = 0d7bc9ca4
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 9f84511a3
