--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = e9c0857d3
+	base = d5ceb281a
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = e9c0857d3
