--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = b0252490e
+	base = 6e04da85d
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = b0252490e
