--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = b71457769
+	base = 1fab2fbd4
 	trim = pid_controller
-	trimbase = 
+	trimbase = b71457769
