--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 7a2b84e26
+	base = d9744d644
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 7a2b84e26
