--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = f347911c2
+	base = a231fc409
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = f347911c2
