--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 1d3a91ea6
+	base = 7f8da93ff
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 1d3a91ea6
