--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 59c652189
+	base = 9fa6b1f84
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 59c652189
