--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 26c3bbdcc
+	base = a8488a004
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 26c3bbdcc
