--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = cf71f4dd0
+	base = 94838d52c
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = cf71f4dd0
