--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 27b3918f1
+	base = 0f2839f8d
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 27b3918f1
