--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 0943e5cad
+	base = 3f7cc1d6c
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 0943e5cad
