--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = fc6f5424e
+	base = 272c63445
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = fc6f5424e
