--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 25c07b278
+	base = 2e1d5b469
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 25c07b278
