--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 58a2964d7
+	base = cd2f9ac86
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 58a2964d7
