--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = c1575dc10
+	base = 1cf21f71d
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = c1575dc10
