--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 47a8a87b8
+	base = f435da8b5
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 47a8a87b8
