--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = a6a6bff36
+	base = f806bc676
 	trim = position_controllers
-	trimbase = 
+	trimbase = a6a6bff36
