--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 72d8d69d5
+	base = 7e5e24e6a
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 72d8d69d5
