--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = b76de8e89
+	base = e1fda2d39
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = b76de8e89
