--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = a0623bc5a
+	base = 92aa4c3d1
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = a0623bc5a
