--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 523f0b7bb
+	base = 732c28f16
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 523f0b7bb
