--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = bf8554f2b
+	base = 257a67ced
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = bf8554f2b
