--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 1f64f7cd9
+	base = d6b7a933d
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 1f64f7cd9
