--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = b61724c07
+	base = e327db192
 	trim = pid_controller
-	trimbase = 
+	trimbase = b61724c07
