--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 47d79abf9
-	base = 76d91f181
+	base = a61340200
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 76d91f181
