--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 9bd91687c
+	base = f88145c3e
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 9bd91687c
