--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = f73d2b010
+	base = 5f605bdb2
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = f73d2b010
