--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = bc54b76d9
+	base = 6b9576f81
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = bc54b76d9
