--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 817372713
+	base = 62f2dcdc3
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 817372713
