--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 84daa09fe
+	base = e192ecb06
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 84daa09fe
