--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 7b10cbbb1
+	base = c0d7f5003
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 7b10cbbb1
