--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = b14d1e620
+	base = a0559c287
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = b14d1e620
