--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 810b86d5c
+	base = e30720beb
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 810b86d5c
