--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 3fdf2de9a
+	base = 8bc1d2ec8
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 3fdf2de9a
