--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 554eaf260
+	base = 99e70cf52
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 554eaf260
