--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = e31c092b7
+	base = 0637dd0b6
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = e31c092b7
