--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 6eccb3cb0
+	base = 73d24b482
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 6eccb3cb0
