--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = ad2baaeca
+	base = 5c5651a46
 	trim = position_controllers
-	trimbase = 
+	trimbase = ad2baaeca
