--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 4590eb23a
+	base = efeb88ae6
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 4590eb23a
