--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 81f3743cc
+	base = 43a5e89fc
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 81f3743cc
