--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = f0a15a27e
+	base = d95f9e1d4
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = f0a15a27e
