--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = c8539e90b
+	base = 9f2deac64
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = c8539e90b
