--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = ef61a8d6d
+	base = f2dc02f63
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = ef61a8d6d
