--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = cdc915c6d
+	base = 54bae9c59
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = cdc915c6d
