--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = 01fad8c58
-	trim = 
-	trimbase = 
+	base = 3e86f042c
+	trim = pid_controller
+	trimbase = 01fad8c58
