--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 4d3a24d79
-	base = a8237fd93
+	base = 5c72dceab
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = a8237fd93
