--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/iron/pid_controller
-	previous = 
-	base = 3e86f042c
+	previous = 3e86f042c
+	base = 425985877
 	trim = 
 	trimbase = 
