--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/iron/pid_controller
-	previous = 
-	base = 396d2a6d3
+	previous = 396d2a6d3
+	base = 7897f6a5c
 	trim = 
 	trimbase = 
