--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/iron/pid_controller
-	previous = 
-	base = c78ccda11
+	previous = c78ccda11
+	base = acf24748d
 	trim = 
 	trimbase = 
