--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 0e2dede80
+	base = 7486fa255
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 0e2dede80
