--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 0118f689f
+	base = 69b12aa42
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 0118f689f
