--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = cd4b96b26
+	base = ada445ff5
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = cd4b96b26
