--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 670958624
+	base = 11ef72202
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 670958624
