--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = a5b891d0b
+	base = 254f7630e
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = a5b891d0b
