--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 867117cff
+	base = 6300add29
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 867117cff
