--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 093159b09
+	base = bc590b5e8
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 093159b09
