--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = a2cd69ad2
+	base = 63c3553c2
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = a2cd69ad2
