--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = c84a4f071
+	base = 8b9996de9
 	trim = effort_controllers
-	trimbase = 
+	trimbase = c84a4f071
