--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 1b29f2545
+	base = 5e58ccab5
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 1b29f2545
