--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = cb98663df
+	base = dfb8f9c84
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = cb98663df
