--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 2254bcca9
+	base = 64c9ea197
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 2254bcca9
