--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 69ff187ae
+	base = af109fe48
 	trim = position_controllers
-	trimbase = 
+	trimbase = 69ff187ae
