--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 20c2e1a58
+	base = e203509f7
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 20c2e1a58
