--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 3b8bbb068
+	base = cd344ae7e
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = 3b8bbb068
