--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 9f54551fa
+	base = 6a88c014b
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 9f54551fa
