--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 8210e7388
+	base = c1e171669
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 8210e7388
