--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 15ac36db2
+	base = afc5e2783
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 15ac36db2
