--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 4b26cbf0b
+	base = ce3ecfe7b
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 4b26cbf0b
