--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 450dac721
-	base = 5eb2bb843
+	base = 72497f3da
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 5eb2bb843
