--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 28d2aa057
+	base = 5b49932a8
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 28d2aa057
