--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 04d21353c
+	base = ebaaeeb1f
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 04d21353c
