--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = a5084ac11
+	base = a115bdec3
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = a5084ac11
