--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 8ab396a4b
+	base = 42756663b
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 8ab396a4b
