--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = abd67c366
+	base = 43971f50c
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = abd67c366
