--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = ce99e5270
+	base = 0d216308c
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = ce99e5270
