--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 0c6ac8c5e
+	base = ab7959db5
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 0c6ac8c5e
