--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 710129510
+	base = 17daf3745
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 710129510
