--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = b8858df34
+	base = fd86c9946
 	trim = effort_controllers
-	trimbase = 
+	trimbase = b8858df34
