--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = f76fed77b
+	base = 3b692567d
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = f76fed77b
