--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 6b0e01a9e
+	base = 7e1c7d407
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 6b0e01a9e
