--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = d40e4356b
+	base = 8ee045121
 	trim = admittance_controller
-	trimbase = 
+	trimbase = d40e4356b
