--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = aa478258e
+	base = f00bfc4c0
 	trim = position_controllers
-	trimbase = 
+	trimbase = aa478258e
