--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 871e13a85
-	trim = 
-	trimbase = 
+	base = 8ee2e8744
+	trim = parallel_gripper_controller
+	trimbase = 871e13a85
