--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 6c86e3f92
+	base = dff9dcced
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 6c86e3f92
