--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = d85551669
+	base = e97ca3799
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = d85551669
