--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 52dcca47e
+	base = 8ec6a851e
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 52dcca47e
