--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 0b78b7204
+	base = 10a57a1c1
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 0b78b7204
