--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = f3b2490f5
+	base = 29b494a7f
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = f3b2490f5
