--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 5e6ef7c32
+	base = 5532f3ab3
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 5e6ef7c32
