--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 66def6450
+	base = 9dd761e3f
 	trim = pid_controller
-	trimbase = 
+	trimbase = 66def6450
