--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 5ef22eb02
+	base = ce17355ea
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 5ef22eb02
