--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/jazzy/parallel_gripper_controller
-	previous = 
-	base = c2321c474
+	previous = c2321c474
+	base = a53df1bdc
 	trim = 
 	trimbase = 
