--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/jazzy/parallel_gripper_controller
-	previous = 
-	base = 8ee2e8744
+	previous = 8ee2e8744
+	base = c7801cb64
 	trim = 
 	trimbase = 
