--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/jazzy/parallel_gripper_controller
-	previous = 
-	base = 1f1e8cf2b
+	previous = 1f1e8cf2b
+	base = 4648b9329
 	trim = 
 	trimbase = 
