--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 9a8c8f5bd
+	base = 2016af789
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 9a8c8f5bd
