--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 31c603e21
+	base = 8bcd25e18
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 31c603e21
