--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = ee3ad2807
+	base = fd50c9f13
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = ee3ad2807
