--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 34b78cf5b
+	base = aad9b980c
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = 34b78cf5b
