--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = cd040544b
+	base = 37f37eecf
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = cd040544b
