--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 58ade403b
+	base = ceccfea29
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = 58ade403b
