--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 2aa92099f
+	base = 8972bea34
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 2aa92099f
