--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = d29197f12
+	base = f711d0c62
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = d29197f12
