--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = ca56ef971
+	base = 5d3d69c0a
 	trim = effort_controllers
-	trimbase = 
+	trimbase = ca56ef971
