--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 86c5904b3
+	base = 8f53bd590
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 86c5904b3
