--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 4147b97b5
+	base = a3d15ec6c
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 4147b97b5
