--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 765dc1c6a
+	base = 776fed30b
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 765dc1c6a
