--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 2d73a4863
+	base = 53eab44dc
 	trim = position_controllers
-	trimbase = 
+	trimbase = 2d73a4863
