--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 55c6909c0
-	trim = 
-	trimbase = 
+	base = 93de42e01
+	trim = parallel_gripper_controller
+	trimbase = 55c6909c0
