--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 170e2daa1
+	base = 28f52240f
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 170e2daa1
