--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = d6ba374d4
+	base = d0276f25f
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = d6ba374d4
