--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 1b399efc5
+	base = a6ac0bb45
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = 1b399efc5
