--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 91181e5ba
+	base = d06af23ab
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 91181e5ba
