--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 91bda4eb7
+	base = 9fd2ec6ce
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 91bda4eb7
