--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = e741acc9d
+	base = 3dd3b4d58
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = e741acc9d
