--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 2e42c80ce
+	base = 01aa7a2e5
 	trim = pid_controller
-	trimbase = 
+	trimbase = 2e42c80ce
