--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = dc6c27579
-	base = 1dbb411be
+	base = 802c618b1
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 1dbb411be
