--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/rolling/parallel_gripper_controller
-	previous = 
-	base = 93de42e01
+	previous = 93de42e01
+	base = aa1d5e895
 	trim = 
 	trimbase = 
