--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/parallel_gripper_controller
-	previous = 
-	base = a4b90a863
+	previous = a4b90a863
+	base = 5bb76a138
 	trim = 
 	trimbase = 
