--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/rolling/parallel_gripper_controller
-	previous = 
-	base = 3dbd7f764
+	previous = 3dbd7f764
+	base = 1731460b8
 	trim = 
 	trimbase = 
