--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/rolling/parallel_gripper_controller
-	previous = 
-	base = 6e03f9bf5
+	previous = 6e03f9bf5
+	base = 3838a72d8
 	trim = 
 	trimbase = 
