--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = abfa3622d4
+	base = e1a43f1ed5
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = abfa3622d4
