--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 5b0952a305
+	base = 00d22c065e
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = 5b0952a305
