--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = f85f807552
+	base = 28000aade9
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = f85f807552
