--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = f0efb9663c
+	base = 3024a1f4ea
 	trim = position_controllers
-	trimbase = 
+	trimbase = f0efb9663c
