--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = d9459281d8
+	base = 109bbf5a51
 	trim = effort_controllers
-	trimbase = 
+	trimbase = d9459281d8
