--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 9aa60ce781
+	base = 3560b7c449
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 9aa60ce781
