--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 2414ddedec
-	trim = 
-	trimbase = 
+	base = c45d0cfba3
+	trim = mecanum_drive_controller
+	trimbase = 2414ddedec
