--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = e70e8491a0
+	base = efbe1c2790
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = e70e8491a0
