--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 423f9ac415
+	base = a38dcbc9ee
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = 423f9ac415
