--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 98d0613607
+	base = 1ca987f811
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 98d0613607
