--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = d349581583
+	base = a9c0aae823
 	trim = pid_controller
-	trimbase = 
+	trimbase = d349581583
