--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 3793a7d8c5
+	base = b0e1845903
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 3793a7d8c5
