--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 571661cdf7
+	base = 44e8007c0d
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = 571661cdf7
