--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = db9d6b116f
+	base = a0f06d3bea
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = db9d6b116f
