--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 325ad4b2a0
+	base = 85b5d7b88a
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = 325ad4b2a0
