--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 9889689e5a
+	base = 934c4d4f40
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = 9889689e5a
