--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 2da30282c9
+	base = b89bbcaa86
 	trim = ros2_controllers
-	trimbase = 
+	trimbase = 2da30282c9
