--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 0889e88103
+	base = 280c3dcd56
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 0889e88103
