--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 5f2b56fe32
+	base = 863cb7d5ac
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = 5f2b56fe32
