--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = ad7976a06d
+	base = 7dfaf07d08
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = ad7976a06d
