--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 65664250ba
+	base = 9f248a3f09
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = 65664250ba
