--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = de4ea6a2d9
+	base = ad2feba03d
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = de4ea6a2d9
