--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = 2f1e009cb5
+	base = db422b14eb
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 2f1e009cb5
