--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = c0d672b7f6
-	base = a5116070c5
+	base = cf34c2d150
 	trim = admittance_controller
-	trimbase = 
+	trimbase = a5116070c5
