--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = release/humble/mecanum_drive_controller
-	previous = 
-	base = c45d0cfba3
+	previous = c45d0cfba3
+	base = 8b8b0a189b
 	trim = 
 	trimbase = 
