--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = debian/humble/mecanum_drive_controller
-	previous = 
-	base = 7a9170ad32
+	previous = 7a9170ad32
+	base = b6db806b60
 	trim = 
 	trimbase = 
