--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = rpm/humble/mecanum_drive_controller
-	previous = 
-	base = 367a85b532
+	previous = 367a85b532
+	base = 7a5130517c
 	trim = 
 	trimbase = 
