--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 47914dfa6d
+	base = c8dc47e954
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 47914dfa6d
