--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 4fa505e5a8
+	base = c9bc76af83
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = 4fa505e5a8
