--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = c7f2bc30d7
+	base = b694283d63
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = c7f2bc30d7
