--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = eea65a1c32
+	base = 84f1382eeb
 	trim = diff_drive_controller
-	trimbase = 
+	trimbase = eea65a1c32
