--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 2153ec99fc
+	base = c613dafe39
 	trim = ackermann_steering_controller
-	trimbase = 
+	trimbase = 2153ec99fc
