--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = a05e9377b9
+	base = a6adf39dd3
 	trim = velocity_controllers
-	trimbase = 
+	trimbase = a05e9377b9
