--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = f4d680e2df
+	base = 0317d1562a
 	trim = joint_trajectory_controller
-	trimbase = 
+	trimbase = f4d680e2df
