--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = d402d2c645
+	base = 594f5775d7
 	trim = pose_broadcaster
-	trimbase = 
+	trimbase = d402d2c645
