--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 94cd96fdb2
+	base = f54dd98a23
 	trim = range_sensor_broadcaster
-	trimbase = 
+	trimbase = 94cd96fdb2
