--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 0317cc3500
+	base = eaee5f761b
 	trim = effort_controllers
-	trimbase = 
+	trimbase = 0317cc3500
