--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 1b3f9a07b7
+	base = 6e8e4bb6bc
 	trim = forward_command_controller
-	trimbase = 
+	trimbase = 1b3f9a07b7
