--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = f63f83e4a9
+	base = 5ef2b49396
 	trim = tricycle_steering_controller
-	trimbase = 
+	trimbase = f63f83e4a9
