--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 7dd583f588
+	base = 7ae5224bd7
 	trim = admittance_controller
-	trimbase = 
+	trimbase = 7dd583f588
