--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = d5825adec9
+	base = 091513dc14
 	trim = position_controllers
-	trimbase = 
+	trimbase = d5825adec9
