--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 1de90c3ac0
+	base = 1e1d30317a
 	trim = parallel_gripper_controller
-	trimbase = 
+	trimbase = 1de90c3ac0
