--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = db5e572836
+	base = 1937176f9a
 	trim = gripper_controllers
-	trimbase = 
+	trimbase = db5e572836
