--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = e5e88ba8bf
+	base = 86b4362c1d
 	trim = steering_controllers_library
-	trimbase = 
+	trimbase = e5e88ba8bf
