--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = b3c50109cf
+	base = 0be25104dc
 	trim = bicycle_steering_controller
-	trimbase = 
+	trimbase = b3c50109cf
