--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 134dd695d2
+	base = d9e7445e9c
 	trim = gpio_controllers
-	trimbase = 
+	trimbase = 134dd695d2
