--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = d7abf98818
+	base = 129a3e6811
 	trim = tricycle_controller
-	trimbase = 
+	trimbase = d7abf98818
