--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = b929bfe9dc
+	base = 7a78d881be
 	trim = rqt_joint_trajectory_controller
-	trimbase = 
+	trimbase = b929bfe9dc
