--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 5c052df700
+	base = 6f145933b0
 	trim = imu_sensor_broadcaster
-	trimbase = 
+	trimbase = 5c052df700
