--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 765f4001a7
+	base = ffc5388e7f
 	trim = pid_controller
-	trimbase = 
+	trimbase = 765f4001a7
