--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 4afcdc3400
+	base = 317bfd895a
 	trim = mecanum_drive_controller
-	trimbase = 
+	trimbase = 4afcdc3400
