--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 0c9cad4654
+	base = 11864a2f25
 	trim = joint_state_broadcaster
-	trimbase = 
+	trimbase = 0c9cad4654
