--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = a5b5deb48d
+	base = 45d1134729
 	trim = ros2_controllers_test_nodes
-	trimbase = 
+	trimbase = a5b5deb48d
