--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	parent = upstream
 	previous = 444c476af0
-	base = 7c1f080a39
+	base = 372a3f468c
 	trim = force_torque_sensor_broadcaster
-	trimbase = 
+	trimbase = 7c1f080a39
